--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "start": "webpack-cli serve --mode development --open --hot --port 3001"
+    "start": "webpack-cli serve --mode development --open --hot --port 3001",
+    "server": "node server.js"
   },
   "author": "Connor",
   "license": "ISC",
@@ -22,10 +23,6 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.2",
-    "mongodb": "^4.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
