debug after refactor

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "start": "webpack-cli serve --mode development --open --hot --port 3001",
-    "server": "node server.js"
+    "start": "webpack-cli serve --mode development --open --hot --port 3001"
   },
   "author": "Connor",
   "license": "ISC",
