--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "body-parser": "^1.19.1",
+    "express": "^4.17.2",
+    "express-graphql": "^0.12.0",
+    "mongoose": "^6.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
