--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "start": "webpack-cli serve --mode development --open --hot --port 3001"
+    "start": "webpack-cli serve --mode development --open --hot --port 3001",
+    "dev": "nodemon index.js --ignore client"
   },
   "author": "Connor",
   "license": "ISC",
@@ -16,6 +17,7 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^5.2.7",
     "html-webpack-plugin": "^5.3.2",
+    "nodemon": "^2.0.15",
     "style-loader": "^3.1.0",
     "webpack": "^5.44.0",
     "webpack-cli": "^4.7.2",
