--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "^8.2.2",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^5.2.7",
+    "cypress": "^10.4.0",
     "html-webpack-plugin": "^5.3.2",
     "nodemon": "^2.0.15",
     "style-loader": "^3.1.0",
